fixed UTF-8